<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bet Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="graph_name">First linear graph</string>
    <string name="add_point">Add Point:</string>
    <string name="stackeResult">Stacke return value</string>
    <string name="wonRadioButton">Won</string>
    <string name="loseRadioButton">Lose</string>
    <string name="showLegend">Show Legend</string>
    <string name="addEventButton">Add Event</string>
    
    <string name="bets_title">Bets</string>
    <string name="add_button">ADD</string>
    <string name="edit_button">EDIT</string>
    <string name="delete_button">DELETE</string>
    
    <string name="add_bet">Add bet</string>
    
    <string name="home_side">Home side:</string>
    <string name="away_side">Away side:</string>
    <string name="bet">Bet:</string>
    <string name="stake">Stake:</string>
    <string name="odds">Odds:</string>
    <string name="verdict">Verdict:</string>
    <string name="returnValue">Return:</string>
    
    <string name="save_data">Save</string>
    
    <string name="edit_bet_title">Edit Bet</string>
    
    <!-- Column names: -->
    <string name="betIDColumn">betsID</string>
    <string name="homeSideColumn">homeSide</string>
    <string name="awaySideColumn">awaySide</string>
    <string name="betColumn">bet</string>
    <string name="stakeColumn">stake</string>
    <string name="oddsColumn">odds</string>
    <string name="verdictColumn">verdict</string>
    <string name="returnColumn">returnValue</string>
    

</resources>
